alpm-types/src/snapshots/env::invalid_package_option@case_1.snap
---
source: alpm-types/src/env.rs
---
error: invalid makepkg packaging option
 | 
 | somethingelse
 | ^ expected `autodeps`
